--- a/assets/style/code.css
+++ b/assets/style/code.css
@@ -1,11 +1,10 @@
 pre:has(code) {
-  font-family: "Atkinson Hyperlegible", sans-serif;
   background-color: var(--code-blocks-dark);
   color: white;
-  padding: 1rem;
   border: 1px solid var(--primary);
   border-radius: 5px;
   overflow-x: auto;
+  padding: 1rem;
 }
 
 code,
@@ -16,6 +15,7 @@ pre code.hljs,
   background: none;
   color: white;
   display: contents;
+  font-size: 1rem;
 }
 
 .hljs-string {
