--- a/assets/style/buttons.css
+++ b/assets/style/buttons.css
@@ -14,43 +14,26 @@
   background: var(--primary-p500);
 }
 
-.button-border {
-  margin-top: 16px;
-  padding: 2px;
-  background: var(--gradient-brand);
-  border-radius: 8rem;
-  width: fit-content;
-  min-width: fit-content;
-  height: fit-content;
-}
-
-.brand-border-button {
-  padding: 12px;
-  padding-bottom: 5px;
-  padding-top: 9px;
-  border-radius: 8rem;
-  background: white;
+.white-button {
+  background: var(--neutral-n50);
   color: var(--primary-p400);
-  border: none;
-  outline: none;
+  min-height: 20px;
+  max-height: 20px;
 }
 
-.brand-border-button * {
+.white-button:hover {
+  background: var(--primary-p50);
+}
+
+.white-button * {
   vertical-align: middle;
 }
 
-.brand-border-button svg {
-  margin-bottom: 2px;
+.white-button svg {
+  margin-bottom: 1px;
 }
 
-.brand-border-button svg path {
-  transition: stroke 0.5s ease;
-}
-
-.brand-border-button:hover {
-  color: #fff;
-}
-
-.brand-border-button:hover svg path {
-  stroke: #fff;
+.white-button svg:hover {
+  background: var(--primary-p50);
+  stroke: black;
 }
