--- a/assets/style/buttons.css
+++ b/assets/style/buttons.css
@@ -1,46 +1,10 @@
-.button {
-  padding: 0.6rem 0.8rem;
-  border-radius: 8rem;
-  background: var(--primary-p400);
-  transition: 0.3s;
-  color: #fff;
-  font-family: inherit;
-  cursor: pointer;
-  display: block;
-  width: fit-content;
-}
-
-.button:hover {
-  background: var(--primary-p500);
-}
-
-.button-border {
-  margin-top: 16px;
-  padding: 2px;
-  background: var(--gradient-brand);
-  border-radius: 8rem;
-  width: fit-content;
-  min-width: fit-content;
-  height: fit-content;
-}
-
 .brand-border-button {
-  padding: 12px;
-  padding-bottom: 5px;
-  padding-top: 9px;
+  background-image: var(--gradient-brand);
   border-radius: 8rem;
-  background: white;
+  box-sizing: border-box;
   color: var(--primary-p400);
-  border: none;
-  outline: none;
-}
-
-.brand-border-button * {
-  vertical-align: middle;
-}
-
-.brand-border-button svg {
-  margin-bottom: 2px;
+  display: flex;
+  padding: 1px;
 }
 
 .brand-border-button svg path {
@@ -53,4 +17,40 @@
 
 .brand-border-button:hover svg path {
   stroke: #fff;
+}
+
+.span-brand {
+  align-items: center;
+  border-radius: 4rem;
+  display: flex;
+  justify-content: center;
+  background: #fff;
+  color: var(--primary-p400);
+  transition: background 0.5s ease;
+  width: 100%;
+  gap: 5px;
+  margin: 1px;
+  padding-left: 0.75rem;
+  padding-right: 0.4rem;
+  line-height: 100%;
+}
+
+.brand-border-button:hover span {
+  background: var(--primary-p400);
+  color: #fff;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .brand-border-button:hover {
+    color: var(--primary-p400);
+  }
+
+  .brand-border-button:hover svg path {
+    stroke: var(--primary);
+  }
+
+  .brand-border-button:hover span {
+    background: #fff;
+    color: var(--primary-p400);
+  }
 }
