--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -8,8 +8,8 @@
 .news,
 .packages,
 .about-bioconductor {
-  max-width: 382px;
-  min-width: 382px;
+  max-width: 24rem;
+  min-width: 24rem;
   padding: 2rem;
   border-radius: 0.5rem;
   background-color: white;
