--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -30,6 +30,7 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
   <link rel="stylesheet" type="text/css" href="/style/fonts.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/colors.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/typography.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/announcement.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/code.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/gallery.css" media="screen" />
