--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" type="text/css" href="/style/gallery.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/blockquote.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/lists.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/breadcrumbs.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/bioconductor-v2.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/header.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/footer.css" media="screen"/>
