--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -16,6 +16,7 @@ footer {
 footer a {
   color: #fff;
 }
+
 .footer-container {
   max-width: 1400px;
   margin: auto;
@@ -37,7 +38,7 @@ footer a {
   flex-direction: column;
   align-items: start;
   gap: 0.625rem;
-  padding-inline-start: 0px;
+  padding-inline-start: 0;
   margin-right: auto;
 }
 
@@ -82,7 +83,7 @@ footer a {
 
   :is(.link-container-inner nav) {
     min-width: 10rem;
-    margin-inline-end: 0px;
+    margin-inline-end: 0;
   }
 
   .list-container-inner {
@@ -105,7 +106,7 @@ footer a {
 
   .socials-logo-container {
     display: block;
-    padding: 1rem 0rem;
+    padding: 1rem 0;
   }
 
   .socials {
