Fixed issue with content when collapsing to mobile

--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -42,7 +42,7 @@ nav.subnav a {
 }
 
 @media (width <= 768px) {
-  main > .container {
+  main > .container.main-subnav {
     display: block;
   }
 
