Made some changes based on design feedback

--- a/assets/style/code.css
+++ b/assets/style/code.css
@@ -3,6 +3,7 @@ pre:has(code) {
   padding: 2px;
   background: var(--gradient-brandreverse);
   white-space: normal;
+  margin-bottom: 1rem;
 }
 
 code,
