--- a/assets/style/breadcrumbs.css
+++ b/assets/style/breadcrumbs.css
@@ -2,7 +2,7 @@
   list-style-type: none;
   display: flex;
   gap: 0.5rem;
-  margin: 0 0 0.75rem;
+  margin: 0;
   padding: 0;
   line-height: 1.3rem;
 }
