--- a/assets/style/typography.css
+++ b/assets/style/typography.css
@@ -6,7 +6,7 @@ h4,
 h5,
 h6 {
   line-height: 120%;
-  margin: 1rem 0; /* 5px  */
+  margin: 0 0 1rem; /* 5px  */
 }
 
 h1 {
@@ -30,11 +30,11 @@ h4 {
 }
 
 h5 {
-  font-size: 1.2rem; /* 19px */
+  font-size: 1.4rem; /* 19px */
 }
 
 h6 {
-  font-size: 1.1rem; /* 18px */
+  font-size: 1.2rem; /* 18px */
 }
 
 .hero {
