--- a/assets/style/hero.css
+++ b/assets/style/hero.css
@@ -7,7 +7,7 @@
 .hero h1 {
   color: var(--primary-p500);
 }
-
+/* disabled here due to a linting error, but we need the webkit marker for this to work */
 /* stylelint-disable */
 .hero mark {
   background: var(--gradient-brandreverse);
