--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -1,3 +1,36 @@
+.data-scientist-and-developer-info {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tab-label {
+  padding: 10px 16px;
+  cursor: pointer;
+  border: solid 1px;
+}
+
+.tab-radio {
+  display: none;
+}
+
+.tab-content {
+  order: 1;
+  width: 100%;
+  display: none;
+}
+
+/* checked tab */
+.tab-radio:checked + .tab-label {
+  font-weight: bold;
+  color: red;
+  background-color: aqua;
+}
+
+.tab-radio:checked + .tab-label + .tab-content {
+  display: flex;
+  align-items: center;
+}
+
 .information-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
