--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -195,7 +195,7 @@
   width: 100%;
 }
 
-/* Join section CSS  testing testing testing */ 
+/* Join section CSS */ 
 
 .join {
   background-image: var(--gradient-reversewarmcool);
