--- a/layouts/components/header.html
+++ b/layouts/components/header.html
@@ -18,7 +18,7 @@
         <a class="format-bold mobile-link" href="/developers/">Developers</a>
         <a class="format-bold mobile-link" href="/help/">Learn</a>
       </div>
-      <div class="search-container mobile-link">
+      <div class="search-container">
         <form
           class="site-search"
           id="search-form"
