Fixed accessibility issue

--- a/layouts/components/header.html
+++ b/layouts/components/header.html
@@ -25,13 +25,19 @@
           method="GET"
           action="/help/search/index.html"
         >
+          <label for="search-bar" class="sr-only">Search</label>
           <img
             src="/images/icons/search-icon.svg"
             class="search-icon"
             alt=""
             aria-hidden="true"
           />
-          <input class="search-bar" name="search-bar" placeholder="Search" />
+          <input
+            class="search-bar"
+            name="search-bar"
+            placeholder="Search"
+            id="search-bar"
+          />
         </form>
       </div>
 
