--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -44,6 +44,7 @@ header {
   text-decoration: underline;
   text-underline-offset: 7px;
   text-decoration-thickness: 3px;
+  text-decoration-color: var(--primary);
 }
 
 .search-container {
