--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -118,7 +118,18 @@
   border-radius: 4px;
   display: flex;
   gap: 24px;
+  box-shadow: 0px -0.5px 0px 0px rgba(0 23 74/ 0.02),
+    0px 1px 5px 0px rgba(0 23 74/ 0.14);
 }
+
+.data-scientist-chip {
+  color: white;
+  padding: 1rem;
+  background: var(--gradient-purpleblue);
+  text-shadow: 0px -0.5px 0px 0px rgba(0, 23, 74, 0.02),
+    0px 1px 5px 0px rgba(0, 23, 74, 0.14);
+}
+
 .events-header {
   display: flex;
   justify-content: space-between;
