--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -8,6 +8,7 @@
 }
 
 .tab-label {
+  margin-top: 1.5rem;
   border-radius: 8px;
   padding: 12px 24px;
   background: var(--neutral-n50);
@@ -16,9 +17,11 @@
 
 .data-scientist-radio {
   margin-left: auto;
+  margin-right: 0.4rem;
 }
 
 .developer-radio {
+  margin-left: 0.4rem;
   margin-right: auto;
 }
 
@@ -133,7 +136,10 @@
 .data-scientist-chip {
   color: white;
   display: block;
-  padding: 1rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
   margin-right: auto;
   margin-left: auto;
   margin-top: 16px;
